--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "devDependencies": {
         "@babel/core": "^7.17.0",
         "@babel/preset-env": "^7.16.0",
+        "@fontsource/roboto-condensed": "^4.5.9",
+        "@fortawesome/fontawesome-free": "^6.3.0",
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/webpack-encore": "^4.0.0",
+        "bootstrap": "^5.2.3",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
         "webpack": "^5.74.0",
